--- a/portfolio/myportfolio/templates/myportfolio/myhome.html
+++ b/portfolio/myportfolio/templates/myportfolio/myhome.html
@@ -1,56 +1,15 @@
-{% load bootstrap5 %} {% bootstrap_css %} {% bootstrap_javascript %} {% load static %}
-
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>my portfolio home</title>
-    <link rel="stylesheet" href="{% static 'css/style.css' %}" type="text/css" media="all" />
-    <link href="https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&display=swap" rel="stylesheet" />
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg bg-primary">
-      <div class="container-fluid">
-        <a class="navbar-brand text-light" href="#">Navbar</a>
-        <button
-          class="navbar-toggler text-light"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon text-light"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active text-light fw-bold" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-light fw-bold" href="#">About Me</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-light fw-bold" href="#">Project</a>
-            </li>
-          </ul>
-        </div>
+{% extends "myportfolio/common.html" %} {% block content %}
+<div class="container-fluid p-0 home pt-5">
+  <div class="container">
+    <div class="row">
+      <div class="col-3">
+        <img src="https://i.pinimg.com/736x/f9/dd/b4/f9ddb48c4d9010e8333a319d0213ca35.jpg" class="img-fluid" />
       </div>
-    </nav>
-    <div class="container-fluid p-0 home pt-5">
-      <div class="container">
-        <div class="row">
-          <div class="col-5">
-            <img src="https://i.pinimg.com/736x/f9/dd/b4/f9ddb48c4d9010e8333a319d0213ca35.jpg" class="img-fluid" />
-          </div>
-          <div class="col-6">
-            <p class="text-light fs-1">Alessandro Baiocco</p>
-            <p class="text-light fs-1 fw-bold">FULL-STACK DEVELOPER</p>
-          </div>
-        </div>
+      <div class="col-9">
+        <p class="text-light fs-1">Alessandro Baiocco</p>
+        <p class="text-light fs-1 fw-bold">FULL-STACK DEVELOPER</p>
       </div>
     </div>
-  </body>
-</html>
+  </div>
+</div>
+{% endblock %}
