--- a/portfolio/myportfolio/static/css/style.css
+++ b/portfolio/myportfolio/static/css/style.css
@@ -2,34 +2,100 @@
   font-family: "Kode Mono", monospace;
 }
 .home .fw-bold {
+  letter-spacing: 0.3em;
+  overflow: hidden;
+  border-right: 0.15em solid rgb(0, 153, 255);
+  white-space: nowrap;
+  margin: 0 auto;
   font-family: "Kode Mono", monospace;
-  animation: myAnimName 2s cubic-bezier(0.215, 0.61, 0.355, 1) infinite alternate-reverse both;
+  animation: typing 8s steps(40, end) infinite alternate both, blink-caret 0.75s infinite;
 }
 
-.my-bg {
-  height: calc(100vh - 56px);
-  position: absolute;
-  z-index: -20;
+nav {
+  background-color: rgba(57, 154, 219, 0.282);
+  border-bottom: solid 2px white;
 }
-.my-bg img {
-  height: 100%;
-  width: 100%;
+
+.nav-button {
+  background-color: rgba(0, 255, 255, 0.412);
+}
+
+body {
+  /* background-image: url("https://www.chromethemer.com/download/hd-wallpapers/blue-technology-3840x2160.jpg");
+  background-position: center; */
+  background: linear-gradient(326deg, rgba(57, 153, 219, 1) 39%, rgba(70, 198, 192, 1) 92%);
+  min-height: 100vh;
 }
 
 .blueCard {
   background-color: aqua !important;
 }
 
-@keyframes myAnimName {
+.invader {
+  animation: blink 3s ease 0s infinite normal forwards;
+}
+
+.drag {
+  background-color: rgba(255, 255, 255, 0);
+  width: 50px;
+  height: 50px;
+  border: 1px solid white;
+  position: absolute;
+}
+
+/* The typing effect */
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  50% {
+    width: 100%;
+  }
+  60% {
+    width: 100%;
+  }
+
+  to {
+    width: 0;
+  }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from,
+  to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: rgb(75, 224, 234);
+  }
+}
+
+.dissolve {
+  animation: dissolve 2s ease 0s 1 normal forwards;
+}
+
+@keyframes dissolve {
   0% {
-    letter-spacing: 0.6em;
-    opacity: 0;
-  }
-  40% {
-    opacity: 0.6;
-  }
-  100% {
-    letter-spacing: normal;
     opacity: 1;
+    transform: scale(1);
+  }
+
+  100% {
+    opacity: 0;
+    transform: scale(0.6);
+  }
+}
+
+@keyframes blink {
+  0%,
+  50%,
+  100% {
+    opacity: 1;
+  }
+
+  25%,
+  75% {
+    opacity: 0;
   }
 }
