--- a/portfolio/myportfolio/templates/myportfolio/aboutme.html
+++ b/portfolio/myportfolio/templates/myportfolio/aboutme.html
@@ -1,18 +1,29 @@
-{% extends "myportfolio/common.html" %} {% block content %}
+{% extends "myportfolio/common.html" %}{% block content %}
 
-<div class="container">
+<div class="container-fluid my-3">
   <div class="row">
-    <div class="col-3"><p>ciao</p></div>
-    <div class="col-9">
-      <div class="row gap-3">
+    <div class="col-lg-6 col-12">
+      <h1 class="fw-bold text-light">PRESENTAZIONE</h1>
+      <p class="text-light fw-bold">
+        Sono un giovane innamorato del mondo della programmazione e dell’informatica. Ho scelto di mettere al mio primo
+        posto questa passione per farne un lavoro e diventare un professionista IT, ed ho appena concluso con successo e
+        soddisfazione, il Bootcamp di EPICODE. Il mio obiettivo è quello di trovare un ambiente dinamico ed innovativo
+        che mi permetta di crescere come sviluppatore
+      </p>
+    </div>
+    <div class="col-lg-6 col-12">
+      <div class="justify-content-center row gap-2">
         {% for language in languages %}
-        <div class="card text-bg-primary col-3 p-0 justify-content-center">
-          <div class="p-0" style="background-color: #ffffff4d">
-            <img src="{{language.image}}" class="card-img-top" alt="{{language.title}}" style="height: 200px" />
-          </div>
-          <div class="card-body">
-            <h5 class="card-title">{{language.title}}</h5>
-          </div>
+
+        <div class="col-lg-2 col-md-3 col-4 p-2" draggable="true">
+          <a href="{{language.linkLang}}" class="text-decoration-none">
+            <div class="p-0">
+              <img src="{{language.image}}" class="card-img-top" alt="{{language.title}}" />
+            </div>
+            <div>
+              <h5 class="card-title text-light">{{language.title}}</h5>
+            </div></a
+          >
         </div>
         {% endfor %}
       </div>
