--- a/portfolio/myportfolio/templates/myportfolio/common.html
+++ b/portfolio/myportfolio/templates/myportfolio/common.html
@@ -14,12 +14,13 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg p-0">
       <div class="container-fluid">
         <a class="navbar-brand text-light" href="/"
-          ><img src="{% static "assets/logotransparent2.png" %}" style="max-height:70px" /></a
+          ><img src="{% static "assets/alessandro.png" %}" style="max-height:70px" /></a
         >
 
         <button
