--- a/portfolio/myportfolio/templates/myportfolio/myhome.html
+++ b/portfolio/myportfolio/templates/myportfolio/myhome.html
@@ -2,17 +2,37 @@
 <div class="container-fluid p-0 home pt-5">
   <div class="container">
     <div class="row">
-      <div class="col-3">
-        <img src="https://i.pinimg.com/736x/f9/dd/b4/f9ddb48c4d9010e8333a319d0213ca35.jpg" class="img-fluid" />
+      <div class="col-lg-3 col-12">
+        <img src="{% static 'assets/my photo.png' %}" class="img-fluid" />
       </div>
-      <div class="col-9">
-        <div style="width: fit-content">
-          <p class="text-light fs-1">Alessandro Baiocco</p>
-          <p class="text-light fs-1 fw-bold text-align-start">FULL-STACK DEVELOPER</p>
+      <div class="col-lg-9 col-12">
+        <div class="d-flex flex-column">
+          <p class="text-light">Alessandro Baiocco</p>
+          <div style="max-width: fit-content">
+            <p class="d-none d-md-block text-light fw-bold text-align-start ms-0">FULL-STACK DEVELOPER</p>
+            <p class="d-md-none text-light fw-bold text-align-start ms-0">FULL-STACK</p>
+            <p class="d-md-none text-light fw-bold text-align-start ms-0">DEVELOPER</p>
+          </div>
         </div>
       </div>
     </div>
   </div>
-  <script src="{% static 'javascript/home.js' %}"></script>
+  <div class="container-fluid d-flex justify-content-center mt-3">
+    <div class="row">
+      <div class="col-lg-5">
+        <img src="{% static 'assets/vsc.jpg' %}" alt="visual studio code" class="img-fluid" />
+      </div>
+
+      <div class="col-lg-2 d-flex align-items-center justify-content-center flex-column myButtons">
+        <button class="btn btn-outline-info my-3 text-light"><i class="bi bi-file-person"></i> Scarica CV</button>
+        <button class="btn btn-outline-info text-light mb-3"><i class="bi bi-github"></i> GitHub</button>
+        <button class="btn btn-outline-info text-light mb-3"><i class="bi bi-linkedin"></i> Linkedin</button>
+      </div>
+      <div class="col-lg-5">
+        <img src="{% static 'assets/intellij.jpg' %}" alt="visual studio code" class="img-fluid" />
+      </div>
+    </div>
+    <script src="{% static 'javascript/home.js' %}"></script>
+  </div>
 </div>
 {% endblock %}
