--- a/portfolio/myportfolio/templates/myportfolio/common.html
+++ b/portfolio/myportfolio/templates/myportfolio/common.html
@@ -8,6 +8,7 @@
     <title>my portfolio home</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}" type="text/css" media="all" />
     <link href="https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Madimi+One&display=swap" rel="stylesheet" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
