--- a/portfolio/myportfolio/templates/myportfolio/myhome.html
+++ b/portfolio/myportfolio/templates/myportfolio/myhome.html
@@ -24,9 +24,15 @@
       </div>
 
       <div class="col-lg-2 d-flex align-items-center justify-content-center flex-column myButtons">
-        <button class="btn btn-outline-info my-3 text-light"><i class="bi bi-file-person"></i> Scarica CV</button>
-        <button class="btn btn-outline-info text-light mb-3"><i class="bi bi-github"></i> GitHub</button>
-        <button class="btn btn-outline-info text-light mb-3"><i class="bi bi-linkedin"></i> Linkedin</button>
+        <a href="https://drive.google.com/file/d/1APeWP7CiNiR3HXqdqAuFL8-EB4pnLclm/view?usp=drive_link" target="_blank">
+          <button class="btn btn-outline-info my-3 text-light"><i class="bi bi-file-person"></i> Scarica CV</button></a
+        >
+        <a href="https://github.com/alessandro-baiocco" target="_blank"
+          ><button class="btn btn-outline-info text-light mb-3"><i class="bi bi-github"></i> GitHub</button></a
+        >
+        <a href="https://www.linkedin.com/in/alessandro-baioccowebdeveloper/" target="_blank"
+          ><button class="btn btn-outline-info text-light mb-3"><i class="bi bi-linkedin"></i> Linkedin</button></a
+        >
       </div>
       <div class="col-lg-5">
         <img src="{% static 'assets/intellij.jpg' %}" alt="visual studio code" class="img-fluid" />
