--- a/portfolio/myportfolio/templates/myportfolio/myproject.html
+++ b/portfolio/myportfolio/templates/myportfolio/myproject.html
@@ -1,1 +1,58 @@
-{% extends "myportfolio/common.html" %} {% block content %} {% endblock %}
+{% extends "myportfolio/common.html" %} {% block content %} {% load static %}
+<div class="certificate container-fluid p-0 mx-0">
+  <div class="container-fluid py-5 my-md-5">
+    <p class="fw-bold fs-2 text-light text-center">Certificato Epicode</p>
+    <div class="row">
+      <div class="col-12 certSection col-lg-2 d-flex align-items-center">
+        <p class="text-light">
+          Questo è il mio certificato ottenuto da Epicode nel gennaio 2024 dopo aver completato con successo il corso
+          full-stack.Grazie a Epicode ho imparato ed messo in pratica le basi della la maggior parte delle tecnologie
+          che utilizzo oggi.
+        </p>
+      </div>
+      <div class="col-12 certSection col-lg-8"><img src={% static "assets/final.jpg" %} class="img-fluid" /></div>
+      <div class="col-12 certSection col-lg-2 d-flex align-items-center">
+        <p class="text-light">
+          Qui sotto si possono vedere una serie di progetti sviluppati con le tecnologie apprese nel tempo. Che si
+          tratti di un'app meteo o clone di linkedin o di spotify ormai ho portato a termine numerosi progetti sia
+          frontend che backend
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+
+{% for project in projects %}
+<div class="container-fluid p-0 project">
+  {% if forloop.counter0|divisibleby:2 %}
+  <div class="projectMenu text-light d-flex flex-column justify-content-center p-5 leftMenu">
+    {% else %}
+    <div class="projectMenu text-light d-flex flex-column justify-content-center p-5 rightMenu">
+      {% endif %}
+      <h3>{{project.title}}</h3>
+      <p>{{project.description}}</p>
+      <div>
+        <a href="{{project.linkProject}}" target="_blank"
+          ><button class="btn btn-primary"><i class="bi bi-code-slash"></i> Source Code</button></a
+        >
+
+        {% if project.linkVideo != "" %}
+        <a href="{{project.linkVideo}}" target="_blank"
+          ><button class="btn btn-primary"><i class="bi bi-play-btn"></i> Video Demo</button></a
+        >
+        {% else %}
+        <button class="btn btn-danger">Video Demo non disponibile</button>
+        {% endif %} {% if project.linkHost != "" %}
+        <a href="{{project.linkHost}}" target="_blank"
+          ><button class="btn btn-primary"><i class="bi bi-wrench-adjustable"></i> Deploy</button></a
+        >
+        {% else %}
+        <button class="btn btn-danger">Deploy non disponibile</button>
+        {% endif %}
+      </div>
+      <img src="{{project.image}}" alt="project preview" class="" />
+    </div>
+
+    {% endfor %} {% endblock %}
+  </div>
+</div>
