--- a/portfolio/myportfolio/templates/myportfolio/aboutme.html
+++ b/portfolio/myportfolio/templates/myportfolio/aboutme.html
@@ -54,7 +54,7 @@
 </div>
 <p class="text-light text-center fs-2">Contattami</p>
 <div class="container-fluid text-light d-flex justify-content-center">
-  <form action="mailto:baioccoalessandro97@gmail.com" method="post">
+  <form action="mailto:baioccoalessandro97@gmail.com" method="post" class="mb-2">
     <div class="container-fluid d-flex flex-column">
       <label class="fw-bold my-2" for="name">Inserisci il tuo nome</label>
       <input class="text-light mb-2" type="text" name="name" placeholder="il tuo nome" required />
