--- a/myportfolio/templates/myportfolio/aboutme.html
+++ b/myportfolio/templates/myportfolio/aboutme.html
@@ -66,6 +66,6 @@
     </div>
   </form>
 </div>
-<script src="{% static 'javascript/languageAnim.js' %}"></script>
+<script src="../static/javascript/languageAnim.js"></script>
 
 {% endblock %}
