--- a/myportfolio/templates/myportfolio/common.html
+++ b/myportfolio/templates/myportfolio/common.html
@@ -15,7 +15,11 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+      type="text/css"
+    />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg p-0">
