--- a/myportfolio/templates/myportfolio/common.html
+++ b/myportfolio/templates/myportfolio/common.html
@@ -25,7 +25,7 @@
     <nav class="navbar navbar-expand-lg p-0">
       <div class="container-fluid">
         <a class="navbar-brand text-light" href="/"
-          ><img src="{% static "assets/alessandro.png" %}" style="max-height:70px" /></a
+          ><img src="{% static "assets/Alessandro.png" %}" style="max-height:70px" /></a
         >
 
         <button
