--- a/myportfolio/templates/myportfolio/aboutme.html
+++ b/myportfolio/templates/myportfolio/aboutme.html
@@ -5,13 +5,13 @@
     <div class="col-lg-6 col-12">
       <p class="fw-bold text-light fs-3">PRESENTAZIONE</p>
       <p class="text-light fw-bold fs-4">
-        Un saluto a chi sta leggendo,Il mio nome (come avrete gia letto dalla home) è Alessandro Baiocco Sono un giovane
-        che si è appassionato al mondo della programmazione e dell’informatica.
+        Un saluto a chi sta leggendo, Il mio nome (come avrete gia letto dalla home) è Alessandro Baiocco Sono un
+        giovane che si è appassionato al mondo della programmazione e dell’informatica.
       </p>
       <p class="fw-bold text-light fs-3">LA MIA STORIA</p>
       <p class="text-light fw-bold fs-4">
         Già a metà degli anni delle superiori mi capitava di sperimentare assemblandomi da solo le mie macchine. Poi
-        negli ormai lontani anni della pandemia (circa 2020) Ho cominciato a entrare nel mondo della proggramazione e
+        negli ormai lontani anni della pandemia (circa 2020) Ho cominciato a entrare nel mondo della programmazione e
         dopo 3 anni di alternanza lavoro e studio era ora di fare un grande passo. mi sono preso una pausa dal mio
         lavoro per mettere al mio primo posto questa passione per farne un lavoro e diventare un professionista IT,
         concludento con successo e soddisfazione, il Bootcamp di EPICODE.
